# betting_software

./: .env  README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/src/: db_api.py  logger.py  main.py  models.py
app/src/database/: __init__.py  db_communication.py
app/src/routers/: bets.py  events.py
init_postgres/: postgres_table.sql
tests/: tests.py
